--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div>
 		<article>
 			<div class="foto">
-				<h1 class="titulo">Regular Update</h1>
+				<h1 class="titulo">Regular Updates</h1>
 				<p class= "texto">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 		</article>
